syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
package com.example;

service LoginService {
  rpc login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string userName = 1;
  string  password=2;

}

message LoginResponse {

  string access_token = 1;
  string userName=2;

}
